[gd_scene load_steps=2 format=3 uid="uid://mainmenu001"]

[ext_resource type="Script" path="res://src/ui/main_menu.gd" id="1_script"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.18, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 32
text = "IronClash"
horizontal_alignment = 1

[node name="LoginPanel" type="PanelContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxLogin" type="VBoxContainer" parent="VBox/LoginPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UsernameLabel" type="Label" parent="VBox/LoginPanel/VBoxLogin"]
layout_mode = 2
text = "Usuario"

[node name="UsernameInput" type="LineEdit" parent="VBox/LoginPanel/VBoxLogin"]
layout_mode = 2
placeholder_text = "usuario"

[node name="PasswordLabel" type="Label" parent="VBox/LoginPanel/VBoxLogin"]
layout_mode = 2
text = "Contraseña"

[node name="PasswordInput" type="LineEdit" parent="VBox/LoginPanel/VBoxLogin"]
layout_mode = 2
placeholder_text = "contraseña"
secret = true

[node name="LoginButton" type="Button" parent="VBox/LoginPanel/VBoxLogin"]
layout_mode = 2
text = "Entrar"

[node name="RegisterButton" type="Button" parent="VBox/LoginPanel/VBoxLogin"]
layout_mode = 2
text = "Registrarse"

[node name="ErrorLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
text = ""
horizontal_alignment = 1
